Fixed spacing for social login append.

--- a/public/partysync/css/partysync.css
+++ b/public/partysync/css/partysync.css
@@ -205,7 +205,6 @@ footer p {
     float: right;
     font-size: .75rem;
     height: 3rem;
-    width: 200px;
     text-align: center;
     padding-top: 1.5rem;
 }
